--- a/google/google.css
+++ b/google/google.css
@@ -30,10 +30,12 @@ input {
 
 body {
   margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
 }
 
+/* Google */
 #app {
   padding: 15px;
 }
@@ -43,23 +45,41 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  height: 50px;
+  height: 32px;
 }
 
 .wrap-nav .lst-nav {
+  display: block;
   position: relative;
-  padding: 8px;
-  font-size: 14px;
+  padding-left: 21px;
+  font-size: 15px;
+  color: rgb(33, 33, 33);
+}
+
+.img-profile {
+  display: block;
+  position: relative;
+  height: 32px;
+  border-radius: 100%;
 }
 
 .hover-line:hover {
   text-decoration-line: underline;
+  font-weight: 500;
 }
 
 .tit-logo {
   display: block;
   position: relative;
-  margin: 0 auto;
+  margin-top: 10px;
+  width: 500px;
+  margin: 10px auto 0 auto;
+}
+
+.engine-search {
+  display: block;
+  position: relative;
+  margin: 40px auto 0 auto;
 }
 
 .form-search {
@@ -69,29 +89,38 @@ body {
   align-items: center;
 }
 
-.search {
-  margin: 40px 0px;
-}
-
-.style-line {
-  padding: 12px;
-  border: 1px solid lightgray;
-  border-radius: 20px;
-  box-shadow: 0px 0px 5px 0.3px lightgray;
-}
-
-#search {
+.form-search::before {
   display: block;
   position: relative;
-  width: 400px;
+  content: '🔍';
+  font-size: inherit;
+  left: 40px;
+}
 
-  float: left;
+.inp-search {
+  display: block;
+  position: relative;
+  padding: 14px 50px;
+  width: 500px;
+  border-radius: 30px;
+  border: 1px solid lightgray;
+  box-shadow: 1px 2px 4px 2px rgb(236, 236, 236);
+  font-weight: 500;
+}
+
+.btn-voice {
+  display: block;
+  position: relative;
+  font-size: inherit;
+  right: 35px;
+  cursor: pointer;
 }
 
 .shortcut {
   display: flex;
   position: relative;
   justify-content: center;
+  margin-top: 18px;
 }
 
 .wrap-short {
@@ -104,54 +133,97 @@ body {
 .lst-short {
   display: block;
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
+  padding: 20px 25px 30px 25px;
+  cursor: pointer;
 }
 
 .lst-short:hover {
-  background-color: darkgray;
-  border-radius: 10px;
+  display: block;
+  position: relative;
+  z-index: 1;
+  background-color: rgb(232, 232, 233);
+  border-radius: 5px;
 }
 
 .lst-short:before {
   display: block;
   position: absolute;
   content: '';
-  background-color: lightgray;
+  background-color: rgb(241, 243, 244);
   border-radius: 100%;
+  margin: 0 auto;
+  left: calc(50% - 25px);
+  width: 50px;
+  height: 50px;
+}
+
+.lst-short:last-child::after {
+  display: block;
+  position: relative;
+  content: '➕';
   top: 10px;
-  left: calc(50% - 30px);
-  width: 60px;
-  height: 60px;
+  font-size: 20px;
+  z-index: 999;
+}
+
+.lst-short img {
+  position: relative;
+  top: 12px;
 }
 
 .lst-short:hover:after {
   display: block;
   position: absolute;
-  content: ':';
+  content: '➕';
   right: 3px;
   top: 3px;
-  width: 30px;
-  height: 30px;
+  font-size: 20px;
+  transition: .5s;
+  transform: scale(1);
+}
+
+.lst-short:hover:after::before {
+  content: '➕';
+  display: block;
+  position: absolute;
+  color: pink;
+  right: 3px;
+  top: 3px;
 }
 
 .lst-short a {
   display: block;
-  position: relative;
-  margin-top: 70px;
+  position: absolute;
+  width: 90px;
+  left: calc(50% - 45px);
+  bottom: 10%;
+  font-size: 14px;
 }
 
 footer {
-  display: flex;
-  justify-content: flex-end;
-  position: relative;
-  margin-top: 30vh;
+  display: block;
+  position: fixed;
+  bottom: 12px;
+  right: 12px;
 }
 
 .btn-custom {
   display: block;
   position: relative;
-  font-size: 12px;
-  color: blue;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 5px 18px;
+  color: rgb(56, 113, 224);
   right: 0px;
+  border: 1px solid lightgray;
+  box-shadow: 0px 1px 1px .5px rgb(188, 188, 188);
+  border-radius: 30px;
+}
+
+@media screen and (min-width:700px) {
+  .input-search {
+    width: 300px;
+  }
 }
