--- a/google/google.css
+++ b/google/google.css
@@ -30,6 +30,18 @@ input {
   padding: 0;
 }
 
+fieldset {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  min-width: 0;
+
+}
+
+legend {
+  display: table;
+}
+
 img {
   margin: 0;
   padding: 0;
@@ -47,13 +59,14 @@ body {
 #app {
   display: block;
   position: relative;
-  padding: 15px;
   color: white;
 }
 
 .wrap-nav {
   position: relative;
   display: flex;
+  color: white;
+  padding: 15px;
   align-items: center;
   justify-content: flex-end;
   height: min-content;
@@ -136,6 +149,7 @@ body {
   z-index: 1;
   font-size: inherit;
   left: 40px;
+  bottom: 12px;
 }
 
 .inp-search {
@@ -155,7 +169,8 @@ body {
   display: block;
   position: relative;
   font-size: inherit;
-  right: 35px;
+  left: 420px;
+  bottom: 35px;
   cursor: pointer;
 }
 
