--- a/modal/modal.css
+++ b/modal/modal.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-  background: url('./images/dummy_1.jpg') no-repeat center center/cover;
+  background: url('../a.jpg') no-repeat center center/cover;
 }
 
 ul,
@@ -72,25 +72,47 @@ img {
 
 @keyframes move {
   0% {
-    transform: translate(0px, 0px);
+    transform: translate(0%, 0%);
   }
 
   25% {
-    transform: translate(600px, 0px);
+    transform: translate(100%, 0px);
   }
 
   50% {
-    transform: translate(600px, 250px);
+    transform: translate(100%, 100%);
   }
 
   75% {
-    transform: translate(0px, 250px);
+    transform: translate(0px, 100%);
 
   }
 
   100% {
     transform: translate(0px, 0px);
   }
+}
+
+@keyframes cloud1 {
+  0% {
+    transform: translate(0px, 0px);
+  }
+
+  50% {
+    transform: translate(600px, 250px);
+  }
+
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+
+.cloud {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: olivedrab;
+  animation: move 3s infinite;
 }
 
 .ball {
@@ -127,7 +149,11 @@ img {
 .btn {
   width: 50px;
   height: 50px;
-  background-color: blue;
+  background-color: yellow;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .prev {
