--- a/modal/modal.css
+++ b/modal/modal.css
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  font: italic 1.2em "Fira Sans", serif;
 }
 
 body {
@@ -31,6 +32,7 @@ img {
   top: 0;
   right: 0;
   bottom: 0;
+  z-index: 10;
 }
 
 .modalWrap {
@@ -44,7 +46,7 @@ img {
   top: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
-  z-index: 0;
+  z-index: 30;
 }
 
 .modalWrap:hover {
@@ -58,7 +60,7 @@ img {
   width: 200px;
   height: 200px;
   position: absolute;
-  right: 20px;
+  left: calc(50% - 100px);
   bottom: -200px;
   display: block;
   content: '';
@@ -76,15 +78,15 @@ img {
   }
 
   25% {
-    transform: translate(100%, 0px);
+    transform: translate(500px, 0px);
   }
 
   50% {
-    transform: translate(100%, 100%);
+    transform: translate(500px, 100px);
   }
 
   75% {
-    transform: translate(0px, 100%);
+    transform: translate(0px, 100px);
 
   }
 
@@ -95,24 +97,65 @@ img {
 
 @keyframes cloud1 {
   0% {
-    transform: translate(0px, 0px);
+    transform: translateX(-100%);
   }
 
   50% {
-    transform: translate(600px, 250px);
+    transform: translateX(calc(100vw + 100%));
   }
 
   100% {
-    transform: translate(0px, 0px);
+    transform: translateX(-100%);
   }
 }
 
-.cloud {
+
+@keyframes cloud2 {
+  0% {
+    transform: translateX(calc(100vw + 100%));
+
+  }
+
+  50% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(calc(100vw + 100%));
+  }
+}
+
+.clouds {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+
+.cloud1 {
+  display: block;
+  position: relative;
   width: 100px;
   height: 100px;
+  top: 50%;
   border-radius: 50%;
-  background: olivedrab;
-  animation: move 3s infinite;
+  background: white;
+  animation: cloud1 5s infinite;
+  z-index: 20;
+}
+
+.cloud2 {
+  display: block;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 10px;
+  border-radius: 50%;
+  background: white;
+  animation: cloud2 20s infinite;
+  z-index: 20;
 }
 
 .ball {
