--- a/einsmedia/scss/_variables.scss
+++ b/einsmedia/scss/_variables.scss
@@ -12,3 +12,12 @@ $point : rgb(75, 207, 163);
 $gray : #333, #666, #999, #aaa, #d8d8d8, #f1f1f1;
 $url : '../images/';
 
+$bold : 700;
+$medium : 500;
+$light: 400;
+
+
+$bigger: 4em;
+$big : 2em;
+$normal: 1.2em;
+$small : 0.8em;
