--- a/einsmedia/scss/_mixin.scss
+++ b/einsmedia/scss/_mixin.scss
@@ -1,5 +1,7 @@
 @charset "utf-8"; 
 
+@import 'variables';
+
 @mixin reset-space {
   margin: 0;
   padding: 0;
@@ -10,13 +12,22 @@
   font-weight: inherit;
   font-size: inherit;
   color: inherit;
+  font-style: inherit;
 }
 
-@mixin flex-content($axis, $justify) {
+@mixin flex-content($axis, $justify, $align) {
   display: flex;
   flex-direction: $axis;
-  align-items: center;
+  align-items: $align;
   justify-content: $justify;
+}
+
+@mixin background($img) {
+  background-image: url($url + $img);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center, center;
+
 }
 
 @mixin Max {
