--- a/einsmedia/scss/_reset.scss
+++ b/einsmedia/scss/_reset.scss
@@ -1,8 +1,6 @@
 @charset "utf-8"; 
-
 /* reset */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Noto+Serif+KR:wght@400;500;600&display=swap');
-
 @import 'mixin';
 
 .a11y-hide { 
@@ -24,8 +22,6 @@ body, ul, li, p, button {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  // font-family: 'Noto Serif KR', serif;
-  // background-color: #222222;
 }
 
 ul {
@@ -43,4 +39,17 @@ a {
   @include reset-font;
   color: inherit;
   text-decoration: none;
+}
+
+fieldset {
+  @include reset-space;
+  border: none;
+}
+
+address {
+  @include reset-font;
+}
+
+input {
+  border: none;
 }
